# cpptotp

./: .gitignore  CMakeLists.txt  COPYING
src/: bytes.cpp  bytes.h  gauche.cpp  otp.cpp  otp.h  sha1.cpp  sha1.h
src/libcppotp/: bytes.cpp  bytes.h  otp.h
